# HQ

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  VPS_SETUP.md  components.json  docker-compose.yml  drizzle.config.ts  eslint.config.mjs  package-lock.json  package.json
.github/workflows/: build.yml
deploy/: Caddyfile.snippet
desktop/: README.md  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: local.json  remote.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/permissions/autogenerated/: close_link.toml  hide_capture.toml  link_device.toml
desktop/src-tauri/src/: main.rs
desktop/ui/: index.html
drizzle/: 0000_foundation.sql  0001_tasks-notes.sql  0002_drop-notes.sql  0003_finance.sql  0004_plans.sql  0005_drop-plans-board.sql  0006_plans-canvas.sql  0007_plan-depth.sql  0008_plan-steps.sql  0009_platform-stats.sql  0010_device-link-codes.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  0006_snapshot.json  0007_snapshot.json  0008_snapshot.json  0009_snapshot.json  0010_snapshot.json  _journal.json
src/: proxy.ts
src/app/: globals.css  layout.tsx
src/components/: page-header.tsx  placeholder-card.tsx
src/db/: index.ts  schema.ts
src/fonts/: index.ts
src/lib/: areas.ts  audit.ts  currency.ts  dates.ts  finance.ts  format.ts  timeline.ts  user-agent.ts
xsnap/: Dockerfile  from-brave.mjs  login.mjs  package-lock.json  package.json  snap.mjs
(+73 files in other folders)
